add: javascript code

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -64,8 +64,9 @@ body ul {
     }
 
 .card:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: .2s;
+    cursor: pointer;
 }
 
 .cart-button:hover{
