--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,6 +1,19 @@
 *{
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     border: 0;
     user-select: none;
+}
+
+.txt-primary {
+    color: #2c64ac;
+}
+
+.txt-secondary{
+    color: rgb(211, 137, 0) !important;
+}
+
+.txt-subtitle{
+    color: #6c757d !important;
 }
