--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -2,6 +2,22 @@ body a{
     text-decoration: none;
 }
 
+.value-info {
+    display: flex;
+    flex-direction: column;
+    line-height: 15px;
+}
+    .value-info p {
+        font-size: smaller;
+        margin-bottom: 0;
+    }
+
+.amount-button{
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: .3rem .5rem .3rem .5rem;
+}
+
 .nav-logo{
     margin: 1rem 0 1rem 0;
     height: 5rem;
