--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,6 +28,16 @@ body ul {
     left: 0;
 }
 
+.open-cart-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border: solid 2px;
+    height: 2rem;
+    width: 2rem;
+}
+
 .modal-cart{
     z-index: 10; 
     background-color: rgba(0, 0, 0, 0.5);
@@ -76,8 +86,8 @@ body ul {
     cursor: pointer;
 }
 
-.cart-button:hover{
-    background-color: lightcoral;
+.open-cart-button:hover{
+    background-color: lightseagreen;
     color: white;
     cursor: pointer;
 }
