--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,7 +33,7 @@ body ul {
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    border: solid 2px;
+    border: solid 2px lightseagreen;
     height: 2rem;
     width: 2rem;
 }
